2010-01-18  James Wilkinson <james@slor.net>
* pbi_proto80.c: prevent extra carriage return in config file setting.

* win32/sound.c: don't try to reinit sound (causes crash) if -nosound was used.


2010-01-18  James Wilkinson <james@slor.net>
* ui.[ch], win32/atari_win32.c, win32/render_direct3d.*, win32/render_gdi.c, win32/render_gdiplus.cpp, win32/screen_win32.[ch]: committed updated DirectX display enhancements from David Dahlstrom.

* pbi_bb.c, pbi_mio.c, pbi_xld.c: prevent extra carriage returns in config file rom settings.


2010-01-17  James Wilkinson <james@slor.net>
* configure.ac: define SUPPORTS_PLATFORM_CONFIGSAVE and SUPPORTS_PLATFORM_CONFIGURE for DirectX build.


2010-01-14  Piotr Fusik  <fox@scene.pl>
* win32/msc/config.h: #define WIN32 -> HAVE_WINDOWS_H

* win32/render_gdi.obj: was incidentally committed


2010-01-13  James Wilkinson <james@slor.net>
* configure.ac: removed -Wredundant-decls for BeOS

* configure.ac, ui.c, win32/render_*.*, win32/screen_win32.[ch], win32/main.*:
  Changes to support new DirectX code under gcc.

* configure.ac, atari.[ch], atari_sdl.c, compfile.c, devices.c, platform.h, pokey.c, rdevice.c, rtime.c, ui.[ch], ui_basic.c, util.[ch], wince/port/missing.h:
  Changes from WIN32 to DIRECTX and HAVE_WINDOWS_H definitions.


2010-01-12  James Wilkinson <james@slor.net>
* atari_sdl.c:
  Committed patch by Tomaz Krasuski to fix DirectX default for Win32 SDL driver.
  Also made change to correct garbage column in some scaling modes.


2010-01-10  Piotr Fusik  <fox@scene.pl>
* util/colormix.asx, util/colormix.xex: program for testing PAL delay line;
  use arrow keys and space


2010-01-07  Piotr Fusik  <fox@scene.pl>
* ui.c: wrapped UpdateColourControls into ifdef

* colours.c, colours_ntsc.c, colours_pal.c, sio.c: killed MSVC warnings

* win32/msc/config.h, win32/msc/Makefile: updated (colour_ntsc etc.)

  Commiting patch submitted by David Dahlstrom <ddahlstrom@charter.net>